unpackaged/main/default/objects/Internal_Phone_Numbers__c/Internal_Phone_Numbers__c.object-meta.xml
<CustomObject>
    <label>Internal Phone Number</label>
    <nameField>
        <displayFormat>Phone-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Phone Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>