unpackaged/main/default/objects/Internal_Phone_Numbers__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_User</relationshipName>
    <type>Lookup</type>
</CustomField>