unpackaged/main/default/objects/Internal_Phone_Numbers__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>User's last name</description>
    <label>Last Name</label>
    <length>36</length>
    <type>Text</type>
</CustomField>