unpackaged/main/default/objects/Internal_Phone_Numbers__c/fields/Non_SF_Manager__c.field-meta.xml
<CustomField>
    <fullName>Non_SF_Manager__c</fullName>
    <description>A non-salesforce user's manager name</description>
    <label>Manager</label>
    <length>36</length>
    <type>Text</type>
</CustomField>