unpackaged/main/default/objects/Internal_Phone_Numbers__c/fields/Other_Title__c.field-meta.xml
<CustomField>
    <fullName>Other_Title__c</fullName>
    <description>Other and Non-SF User Titles</description>
    <label>Title</label>
    <length>36</length>
    <type>Text</type>
</CustomField>