unpackaged/main/default/objects/Internal_Phone_Numbers__c/fields/Resporg_Status__c.field-meta.xml
<CustomField>
    <fullName>Resporg_Status__c</fullName>
    <label>Resporg Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>