unpackaged/main/default/objects/Internal_Phone_Numbers__c/fields/Routed_From__c.field-meta.xml
<CustomField>
    <fullName>Routed_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Routed From</label>
    <referenceTo>Internal_Phone_Numbers__c</referenceTo>
    <relationshipLabel>Internal Phone Numbers (Routed From)</relationshipLabel>
    <relationshipName>Internal_Phone_Numbers_Routed_From</relationshipName>
    <type>Lookup</type>
</CustomField>