unpackaged/main/default/objects/Internal_Phone_Numbers__c/fields/Routed_To_Extension__c.field-meta.xml
<CustomField>
    <fullName>Routed_To_Extension__c</fullName>
    <label>Routed To Extension</label>
    <type>TextArea</type>
</CustomField>