unpackaged/main/default/objects/Internal_Phone_Numbers__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Use</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
            <value>
                <fullName>Temporary Route to Manager</fullName>
            </value>
            <value>
                <fullName>Transitioning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>