unpackaged/main/default/objects/Internal_Phone_Numbers__c/fields/User_Department__c.field-meta.xml
<CustomField>
    <fullName>User_Department__c</fullName>
    <description>the user's department</description>
    <formula>$User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Department</label>
    <type>Text</type>
</CustomField>