unpackaged/main/default/objects/Internal_Phone_Numbers__c/recordTypes/Non_SF_User_Phone.recordType-meta.xml
<RecordType>
    <fullName>Non_SF_User_Phone</fullName>
    <active>true</active>
    <description>User's who are not in Salesforce</description>
    <label>Non SF User Phone</label>
</RecordType>