unpackaged/main/default/objects/Internal_Phone_Numbers__c/recordTypes/Other_Phone.recordType-meta.xml
<RecordType>
    <fullName>Other_Phone</fullName>
    <active>true</active>
    <description>Any phone number that does not belong to a user</description>
    <label>Other Phone</label>
</RecordType>