unpackaged/main/default/objects/Internal_Phone_Numbers__c/recordTypes/SF_User_Phone.recordType-meta.xml
<RecordType>
    <fullName>SF_User_Phone</fullName>
    <active>true</active>
    <description>Phone number belonging to a Salesforce User</description>
    <label>SF User Phone</label>
</RecordType>